--- a/app/public/home.html
+++ b/app/public/home.html
@@ -6,26 +6,27 @@
 
 	<!-- Latest compiled and minified CSS & JS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-
+	
 </head>
 <body>
 
 	<div class="container">
         <div class="jumbotron">
-            <h1 class="display-3">Friend Finder</h1>
+            <h1 class="display-3"><i class="fa fa-address-card" style="font-size:52px"></i> Friend Finder</i></h1>
             <hr class="my-4">
             <p>Answer a few basic questions.</p>
             <p>Then find the friend with the greatest compatibility!</p>
             <p class="lead">
-              <a class="btn btn-primary btn-lg" href="#" role="button">Go to Survey</a>
+              <a class="btn btn-primary btn-lg" href="/survey" role="button">Go to Survey</a>
             </p>
         </div>
 	</div>	
 	<footer class="footer">
 	    <div class="container">
-	       <p><a href="/api/friends">API Friend Data Link</a> | <a href="/api/waitlist">GitHub Repo</a> </p>
+	       <p><a href="/api/friends">API Friend Data Link</a> | <a href="https://github.com/kglibrarian/friendfinder">GitHub Repo</a> </p>
 	    </div>
 	</footer>
 
